--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,27 @@ title: Emerson Waldorf Robotics
 remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+exclude:
+  - .jekyll-cache/
+  - Gemfile
+  - Gemfile.lock
+  - .idea/
+  - .gitignore
+
+verbose: true
+
+strict_front_matter: true
+
+url: https://emerson-waldorf-robotics.github.io
+
+github_url: https://github.com/Emerson-Waldorf-Robotics
